# local-send-tool

./: .gitignore  Cargo.toml  README.md
.agents/: rules.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-07-bind-ip-option.md  2026-06-07-fix-code-review-issues.md  2026-06-07-fix-discovery-stability.md  2026-06-07-lan-file-transfer.md  2026-06-07-vulnerability-fixes.md
docs/superpowers/specs/: 2026-06-07-bind-ip-option-design.md  2026-06-07-code-review.md  2026-06-07-fix-code-review-issues-design-specs.md  2026-06-07-lan-file-transfer-design.md
src/: client.rs  config.rs  discovery.rs  lib.rs  main.rs  peer.rs  server.rs  tui.rs  web_ui.rs
tests/: config_tests.rs  integration_tests.rs
web/: index.html
