[package]
name = "lan-share"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
local-ip-address = "0.5"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs", "cors"] }
http-body-util = "0.1"
hostname = "0.3"
