[package]
name = "lan-share"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
local-ip-address = "0.5"
socket2 = "0.6.4"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs", "cors"] }
http-body-util = "0.1"
hostname = "0.3"
tower = "0.5.3"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
bytes = "1.0"
directories = "6.0"
indicatif = "0.17"
mime_guess = "2.0"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
